--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="invalid_data">Invalid data received</string>
     <string name="invalid_query">Please enter a valid search query</string>
     <string name="no_internet_connection">No Internet Connection</string>
+    <string name="service_unavailable">Oops!!! Service unavailable. Try later!!!</string>
 </resources>
